--- a/release/css/master.css
+++ b/release/css/master.css
@@ -6766,3 +6766,76 @@ div#gallery .gallery-entry .image, div#author .gallery-entry .image {
   display: block;
   text-align: center;
   margin-top: 6px; }
+
+a.insta-photo .photo-wrapper {
+  display: block;
+  padding-bottom: 100%;
+  transform-style: preserve-3d;
+  perspective: 1500px;
+  position: relative; }
+  a.insta-photo .photo-wrapper .front, a.insta-photo .photo-wrapper .back-wrapper {
+    transition: transform .4s; }
+  a.insta-photo .photo-wrapper .front {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    top: 0;
+    left: 0;
+    background: black;
+    background-size: cover; }
+  a.insta-photo .photo-wrapper .back-wrapper {
+    background: black;
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    transform: rotateY(180deg);
+    display: flex;
+    justify-content: center;
+    align-items: center; }
+    a.insta-photo .photo-wrapper .back-wrapper .back {
+      border: 2px solid #fff;
+      height: calc(100% - 80px);
+      width: calc(100% - 80px);
+      border-radius: 20px;
+      border: 2px solid #fff;
+      display: flex;
+      justify-content: center;
+      align-items: center; }
+      a.insta-photo .photo-wrapper .back-wrapper .back .back-content {
+        position: relative;
+        z-index: 200;
+        text-align: center;
+        color: #fff; }
+        a.insta-photo .photo-wrapper .back-wrapper .back .back-content i {
+          display: block;
+          font-size: 80px; }
+        a.insta-photo .photo-wrapper .back-wrapper .back .back-content span {
+          font-size: 24px; }
+    a.insta-photo .photo-wrapper .back-wrapper:before, a.insta-photo .photo-wrapper .back-wrapper:after {
+      content: '';
+      display: block;
+      position: absolute;
+      width: 50%;
+      height: 100%;
+      background: #000; }
+    a.insta-photo .photo-wrapper .back-wrapper:after {
+      transform: rotate(90deg); }
+
+a.insta-photo:hover .front {
+  transform: rotateY(180deg); }
+
+a.insta-photo:hover .back-wrapper {
+  transform: rotateY(360deg); }
+
+a.insta-photo > .name {
+  margin: 40px 0;
+  display: block;
+  font-size: 21px;
+  color: #AA9859; }
+
+a.insta-photo .description {
+  display: block;
+  font-size: 16px;
+  color: #333; }
